# sample-mkdocs

./: .cursorignore  .editorconfig  .gitignore  .textlintignore  .textlintrc.json  CONTRIBUTING.md  README.md  index.html  mise.toml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build-and-deploy.yml
docs/: index.md
docs/00_common/: authentication.md  guidelines.md  project-overview.md
docs/00_common/features/: 000_template.md  index.md
docs/01_frontend/: architecture.md  guidelines.md  overview.md  screen-transition-diagram.md  ui-components.md
docs/01_frontend/messages/: index.md  info-messages.csv
docs/02_backend/: architecture.md  guidelines.md  overview.md
docs/02_backend/api/: index.md
docs/02_backend/rdb/: .tbls.yml
docs/03_infrastructure/: overview.md
docs/diagrams/plantuml/: build.sh
main/: 404.html  index.html
main/00_common/authentication/: index.html
main/00_common/features/: index.html
main/00_common/guidelines/: index.html
main/00_common/project-overview/: index.html
main/01_frontend/architecture/: index.html
main/01_frontend/guidelines/: index.html
main/01_frontend/messages/: error-messages.csv  index.html  warning-messages.csv
main/01_frontend/overview/: index.html
main/01_frontend/screen-transition-diagram/: index.html
main/01_frontend/ui-components/: index.html
main/02_backend/api/: index.html
main/02_backend/architecture/: index.html
main/search/: search_index.json
(+43 files in other folders)
