[project]
name = "demo-workflow-docs"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.8,<10.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pymarkdownlnt = "^0.9.29"
mkdocs-build-plantuml-plugin = "^1.11.0"
mkdocs-git-revision-date-localized-plugin = "^1.4.5"
pymdown-extensions = "^10.14.3"
mkdocs-mermaid2-plugin = "^1.2.1"
mkdocs-glightbox = "^0.4.0"
neoteroi-mkdocs = "^1.1.0"

[tool.poetry.scripts]
serve = "mkdocs:serve"
build = "mkdocs:build"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
